@@ -1,5 +1,5 @@
 #if !defined(lint) && !defined(__INSIGHT__)
-static const char libbk__rcsid[] = "$Id: b_ringbuf.c,v 1.2 2003/07/02 02:28:03 seth Exp $";
+static const char libbk__rcsid[] = "$Id: b_ringbuf.c,v 1.3 2003/07/10 03:09:03 seth Exp $";
 static const char libbk__copyright[] = "Copyright (c) 2003";
 static const char libbk__contact[] = "<projectbaka@baka.org>";
 #endif /* not lint */
@@ -181,8 +181,8 @@ void bk_ring_destroy(bk_s B, struct bk_ring *ring, bk_flags flags)
 int bk_ring_write(bk_s B, struct bk_ring *ring, void *opaque, bk_flags flags)
 {
   BK_ENTRY(B, __FUNCTION__, __FILE__, "libbk");
-  u_int new;
-  int ret = 1;
+  volatile u_int new;
+  volatile int ret = 1;
 
   if (!ring)
   {
@@ -274,11 +274,11 @@ int bk_ring_write(bk_s B, struct bk_ring *ring, void *opaque, bk_flags flags)
  * @return <i>NULL</i> on error or queue-empty waiting impossible
  * @return <br><i>object</i> on success
  */
-void *bk_ring_read(bk_s B, struct bk_ring *ring, bk_flags flags)
+volatile void *bk_ring_read(bk_s B, struct bk_ring *ring, bk_flags flags)
 {
   BK_ENTRY(B, __FUNCTION__, __FILE__, "libbk");
-  u_int new;
-  void *ret = NULL;
+  volatile u_int new;
+  volatile void *ret = NULL;
 
   if (!ring)
   {
@@ -334,6 +334,7 @@ void *bk_ring_read(bk_s B, struct bk_ring *ring, bk_flags flags)
 
   // Please do not reorder these statements Mr. Compiler
   ret = ring->br_ring[new];
+  ring->br_ring[new] = (void *)0xdeadbeef;	// Invalid value
   ring->br_rhand = new;
 
   if (ring->br_writeasleep || BK_FLAG_ISSET(ring->br_flags, BK_RING_CLOSING) || !ret)
